Fixup some dark mode stuff...

--- a/_sass/color_schemes/light.scss
+++ b/_sass/color_schemes/light.scss
@@ -24,5 +24,3 @@ $search-result-preview-color: $grey-dk-000 !default;
 
 // Minimum lightness on white.
 $body-lighter-color: $grey-dk-100;
-
-$code-background-color: #fefefe;
